script uopdates